# pydata-helsinki-data-ingestion-demo

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
apps/electron/resources/docs/: sources.md
apps/electron/src/main/: sessions.ts
apps/electron/src/renderer/components/ui/: EditPopover.tsx
python/: README.md  pyproject.toml
python/examples/: bridge-config.example.json
python/src/agent_backend/: __init__.py  auth.py  bridge_mcp_server.py  cli.py  llm.py  mcp_stdio.py  models.py  session_mcp_server.py  storage.py
python/src/agent_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
