[project]
name = "agent-backend"
version = "0.1.0"
description = "Python backend and CLI for sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentctl = "agent_backend.cli:main"
sourcectl = "agent_backend.cli:main"
session-mcp-server = "agent_backend.session_mcp_server:main"
bridge-mcp-server = "agent_backend.bridge_mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
